# kotoha

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  pyproject.toml  requirements.txt
docs/plans/: 2026-06-24-local-mvp.md  2026-06-24-phase1-realtime-voice-loop.md  2026-06-26-overlay-sp1-foundation.md  2026-06-26-overlay-sp2-voice-integration.md  2026-06-26-overlay-sp3-desktop-interaction.md  2026-06-28-screen-perception-phase1.md  2026-06-29-desktop-operation-grounding.md  2026-06-29-operation-vocab-expansion.md  2026-06-29-screen-perception-phase2.md  2026-06-29-screen-summary-refresh.md
docs/specs/: 2026-06-24-realtime-voice-bot-design.md  2026-06-26-overlay-design.md  2026-06-26-overlay-sp3-desktop-interaction.md  2026-06-28-screen-perception-design.md  2026-06-29-desktop-operation-grounding-design.md  2026-06-29-operation-vocab-expansion-design.md  2026-06-29-screen-perception-phase2-design.md  2026-06-29-screen-summary-refresh-design.md
kotoha/: config.py  diagnostics.py  events.py  health.py  local_app.py  orchestrator.py  overlay_bridge.py
kotoha/llm/: date_humanize.py  front_client.py  persona.py  sentence_splitter.py  think_filter.py  vlm_client.py
kotoha/memory/: __init__.py  composer.py  compressor.py  discovery.py  manager.py  store.py  (+1 more)
overlay/: .gitignore  README.md  config.json  main.js  package-lock.json  package.json  preload.js  vite.config.js  vitest.config.js
talk_ai/: config.py
tests/: conftest.py  test_bargein.py  test_config.py  test_config_local.py  test_diagnostics.py  test_events.py  test_health.py  test_local_app.py  test_orchestrator.py  test_overlay_bridge.py  test_wiring.py
(+102 files in other folders)
